k8s/base/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: marco-silva
spec:
  selector:
    app: django
  ports:
    - port: 80
      targetPort: 8000
